--- a/Timeclock/Base.lproj/Main.storyboard
+++ b/Timeclock/Base.lproj/Main.storyboard
@@ -81,15 +81,15 @@
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="514"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" misplaced="YES" axis="vertical" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="Kzw-iJ-GY2">
-                                        <rect key="frame" x="47" y="-22" width="507" height="180"/>
+                                        <rect key="frame" x="47" y="167" width="507" height="180"/>
                                         <subviews>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="00:00 PM" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.10000000000000001" translatesAutoresizingMaskIntoConstraints="NO" id="Nf6-Le-log">
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="00:00 PM" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.10000000000000001" translatesAutoresizingMaskIntoConstraints="NO" id="Nf6-Le-log">
                                                 <rect key="frame" x="0.0" y="0.0" width="507" height="117"/>
                                                 <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="100"/>
                                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Monday, December 17" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.10000000000000001" translatesAutoresizingMaskIntoConstraints="NO" id="eY9-K7-Px0">
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Monday, December 17" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.10000000000000001" translatesAutoresizingMaskIntoConstraints="NO" id="eY9-K7-Px0">
                                                 <rect key="frame" x="0.0" y="122" width="507" height="59"/>
                                                 <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="50"/>
                                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -101,6 +101,10 @@
                                 <color key="backgroundColor" red="0.094117656349999995" green="0.24313727020000001" blue="0.2941176593" alpha="1" colorSpace="deviceRGB"/>
                                 <constraints>
                                     <constraint firstItem="Kzw-iJ-GY2" firstAttribute="centerY" secondItem="Wqn-BN-ufi" secondAttribute="centerY" id="0lq-ys-CUi"/>
+                                    <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="Kzw-iJ-GY2" secondAttribute="trailing" constant="10" id="0sq-Xv-76Z"/>
+                                    <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="Kzw-iJ-GY2" secondAttribute="bottom" constant="10" id="1U9-Y1-t7z"/>
+                                    <constraint firstItem="Kzw-iJ-GY2" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="Wqn-BN-ufi" secondAttribute="leading" constant="10" id="3kF-ne-6Cf"/>
+                                    <constraint firstItem="Kzw-iJ-GY2" firstAttribute="top" relation="greaterThanOrEqual" secondItem="Wqn-BN-ufi" secondAttribute="top" constant="10" id="amw-Mg-qqQ"/>
                                     <constraint firstItem="Kzw-iJ-GY2" firstAttribute="centerX" secondItem="Wqn-BN-ufi" secondAttribute="centerX" id="q4p-QQ-bJv"/>
                                 </constraints>
                             </view>
